--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,58 +1,118 @@
-*{
+* {
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
-/* header an navigation styles */
-.nav-title{
- font-weight: 700;
- font-size: 45px;
+
+/* header and navigation styles */
+
+.header {
+    background: white;
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
+    background-repeat: no-repeat;
+    background-position: bottom right, left;
 }
-.text-primary{
-    color:orangered;
+
+.nav-title {
+    font-weight: 700;
+    font-size: 45px;
 }
-nav{
+
+.text-primary {
+    color: orangered;
+}
+
+nav {
     display: flex;
     justify-content: space-between;
     margin: 50px 200px;
 }
-nav li{
+
+nav li {
     list-style: none;
     margin-left: 50px;
 }
-nav ul{
+
+nav ul {
     display: flex;
     align-items: center;
     /* align-items dile sob ul gulo eki line eki center e eshe jacche */
 }
 
-.btn-primary{
+.btn-primary {
     /* color: rgba(0, 0, 0, 0.356); */
     /* keno jani na hire button bold hoye jacche */
     font-size: 20px;
     font-weight: 700;
     border: 0;
-    padding:18px 35px;
-    height:64px;
+    padding: 18px 35px;
+    height: 64px;
     border-radius: 5px;
     background-color: orangered;
 }
+
 /* banner styles */
-.banner{
+.banner {
     display: flex;
-    margin:0 200px;
+    margin: 0 200px;
     align-items: center;
 }
-.banner-subtitle{
-font-weight: 500;
-font-size: 45px;
-margin-bottom:20px ;
+
+.banner-subtitle {
+    font-weight: 500;
+    font-size: 45px;
+    margin-bottom: 20px;
 }
-.banner-title{
-font-weight: 600;
-font-size: 85px;
+
+.banner-title {
+    font-weight: 600;
+    font-size: 85px;
 }
-.banner-des{
-color:black;
-font-size: 18px;
-margin-bottom: 30px;
+
+.banner-des {
+    color: #757575;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+/* about me section styles */
+.about {
+    margin-top: 130px;
+    background: #fff8f3;
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    font-size: 20px;
+    text-align: center;
+}
+
+.section-title {
+    
+    margin-bottom: 18px;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-des {
+    color: #757575;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.about-info-container{
+display:flex;
+justify-content: space-around;
+}
+.info-title{
+font-size: 20px;
+color: #757575;
+}
+.info-des{
+    font-weight: 700;
+    font-size: 20px;
+    color: #474747;
 }
