--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -75,7 +75,8 @@ nav ul {
 }
 
 /* about me section styles */
-.about {
+.about,
+.what-I-do {
     margin-top: 130px;
     background: #fff8f3;
     border-radius: 10px;
@@ -86,10 +87,11 @@ nav ul {
 }
 
 .section-title {
-    
+
     margin-bottom: 18px;
     font-size: 35px;
     font-weight: 700;
+    margin-bottom: 50px;
 }
 
 .section-des {
@@ -98,21 +100,114 @@ nav ul {
     margin-bottom: 30px;
 }
 
-main{
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
 
-.about-info-container{
-display:flex;
-justify-content: space-around;
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
 }
-.info-title{
-font-size: 20px;
-color: #757575;
+
+.info-title {
+    font-size: 20px;
+    color: #757575;
 }
-.info-des{
+
+.info-des {
     font-weight: 700;
     font-size: 20px;
     color: #474747;
 }
+
+/* what-I-do section style 
+ .what-I-do{ 
+    margin-top: 130px;
+    background: #fff8f3;
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    font-size: 20px;
+    text-align: center;
+ }*/
+
+/* what-i-do styles */
+.skills-container {
+    display: flex;
+    gap: 24px;
+
+}
+
+.skill-title {
+    font-size: 20px;
+    margin-top: 30px;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+.skill-des {
+    background: #ffffff;
+    box-shadow: 0 6px 10px;
+    border-radius: 3px;
+    padding: 30px;
+    
+}
+
+/* resume styles */
+.resume{
+    margin-top: 30px;
+}
+.resume-content{
+display: flex;
+gap: 24px;
+}
+.resume-title{
+font-weight: 700;
+font-size: 25px;
+color: #474747;
+margin-bottom: 10px;
+}
+
+.resume-subtitle{
+    font-weight: 600;
+    font-size: 20px;
+    color: #474747;
+    margin-bottom: 20px;
+}
+.resume-des{
+color: #757575;
+}
+
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+}
+
+/* contact style */
+.contact{
+    display: flex;
+    gap: 100;
+    background-color: #fff8f3;
+    padding: 130px 200px;
+}
+.contact .section-title{
+text-align: left;
+}
+
+.contact input[type="text"], input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 35px;
+}
+
+.contact a{
+    text-decoration: none;
+}
+
