--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -39,8 +39,6 @@ nav ul {
 }
 
 .btn-primary {
-    /* color: rgba(0, 0, 0, 0.356); */
-    /* keno jani na hire button bold hoye jacche */
     font-size: 20px;
     font-weight: 400;
     border: 0;
@@ -215,3 +213,6 @@ text-align: left;
     text-decoration: none;
 }
 
+.image{
+    padding: 0 15px;
+}
